add: detail step output handler
