# docs/swagger.yaml
@@ -125,7 +125,7 @@ paths:
       - Exec
   /{id}:
     get:
-      description: 查询执行情况
+      description: 查询任务执行情况
       parameters:
       - description: id
         in: path
@@ -141,7 +141,33 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/handlers.JSONResult'
-      summary: 查询
+      summary: 查询任务
+      tags:
+      - Exec
+  /{id}/{step}:
+    get:
+      description: 查询步骤执行情况
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: step
+        in: path
+        name: step
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.JSONResult'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.JSONResult'
+      summary: 查询步骤
       tags:
       - Exec
   /version:
